# libparakeet-audio

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  libparakeet-audio (fedora).code-workspace  libparakeet-audio.code-workspace
.github/workflows/: build-linux-x86_64.yml  build-windows.yml  test-coverage.linux-x86_64.yml
include/parakeet-audio/: AudioTypes.h  DetectAudioType.h  audio_metadata.h  audio_types.h  detect_audio_type.h  version.h
src/: AudioMetadata.cpp  AudioMetadata.h  DetectAudioType.cpp  DetectAudioType.test.cc  DetectAudioType.test.cxx  audio_metadata.cpp  audio_metadata.h  detect_audio_type.cpp  detect_audio_type.test.cxx  endian.h  parakeet_endian.h  version.cpp.in
src/detection_tests/: apev2_ape.test.cxx  id3_mp3.test.cxx  m4a.test.cxx  mp4.test.cxx
src/test_with_metadata/: apev2_ape.test.cxx
